# djangoproject

./: .env.sample  .gitignore  Category.json  Product.json  README.md  category.json  category_fixture.json  database.ini  product.json  pyproject.toml
admin/: add_product.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog.html  blog_delete.html  blog_form.html  home.html
blog/templatetags/: blog_tags.py  my_tags_blog.py
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_photo.py  0003_alter_category_description_alter_category_name_and_more.py  0004_alter_product_options_product_is_available_and_more.py  0005_alter_product_options.py  0006_alter_product_photo.py  0007_alter_product_options_alter_product_created_at_and_more.py  0008_product_is_moderated.py  0009_remove_product_is_moderated.py  0010_alter_product_is_available.py  0011_alter_product_options_alter_product_is_available.py  __init__.py
catalog/templates/: base.html  home.html  menu.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  category_products.html  home.html  inc_menu.html  menu.html  product_delete.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: cgm.py  csu.py
users/migrations/: 0001_initial.py
(+7 files in other folders)
