[project]
name = "djangoproject"
version = "0.1.0"
description = "\"online store project\""
authors = [
    {name = "Artur Koltyrin"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

