[project]
name = "djangoproject"
version = "0.1.0"
description = "\"online store project\""
authors = [
    {name = "Artur Koltyrin"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "django (>=5.1.5,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "ipython (>=8.32.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

